--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <h1>Dashboard IT</h1>
   <div id="content">
-    <p>Liste des imprimantes, état réseau, etc.</p>
+    <p>Liste des imprimantes, état réseaux, etc.</p>
   </div>
   <script src="script.js"></script>
 </body>
